--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,9 +40,14 @@ button {
   bottom: 20vw;
 }
 
-#divPc img {
+#divPc img, .riga img {
   width: 23vw;
   height: 23vw;
+}
+
+.riga {
+  position: relative;
+  bottom: 10vw;
 }
 
 /*# sourceMappingURL=style.css.map */
