--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,37 +1,8 @@
+@use 'partials/header';
+@use 'partials/hero';
+
 #viola{
     background-color: #640FC5;
-}
-
-img{
-    height: 40px;
-}
-
-ul li{
-   list-style-type: none;
-}
-
-h1{
-    font-size: 5em;
-    font-weight: bolder;
-}
-
-button{
-    padding: 10px;
-    border-radius: 2px;
-    color: white;
-    margin: 1px;
-}
-
-#App{
-    background-color: #0E6CFF;
-}
-
-#Acc{
-    background-color: #FF8700;
-}
-
-#Con{
-    background-color: #4CAF50;
 }
 
 #divPc{
